@@ -141,23 +141,17 @@ throws|throws
 name|IOException
 block|{
 name|int
-name|index
+name|bitSetDoc
 init|=
 name|nextSetBit
 argument_list|(
 literal|0
 argument_list|)
 decl_stmt|;
-name|int
-name|lastNotCleared
-init|=
-operator|-
-literal|1
-decl_stmt|;
 while|while
 condition|(
 operator|(
-name|index
+name|bitSetDoc
 operator|!=
 operator|-
 literal|1
@@ -167,39 +161,30 @@ name|disi
 operator|.
 name|skipTo
 argument_list|(
-name|index
+name|bitSetDoc
 argument_list|)
 condition|)
 block|{
-while|while
-condition|(
-operator|(
-name|index
-operator|!=
-operator|-
-literal|1
-operator|)
-operator|&&
-operator|(
-name|index
-operator|<
+name|int
+name|disiDoc
+init|=
 name|disi
 operator|.
 name|doc
 argument_list|()
-operator|)
-condition|)
-block|{
-name|fastClear
+decl_stmt|;
+name|clear
 argument_list|(
-name|index
+name|bitSetDoc
+argument_list|,
+name|disiDoc
 argument_list|)
 expr_stmt|;
-name|index
+name|bitSetDoc
 operator|=
 name|nextSetBit
 argument_list|(
-name|index
+name|disiDoc
 operator|+
 literal|1
 argument_list|)
@@ -207,50 +192,21 @@ expr_stmt|;
 block|}
 if|if
 condition|(
-name|index
-operator|==
-name|disi
-operator|.
-name|doc
-argument_list|()
-condition|)
-block|{
-name|lastNotCleared
-operator|=
-name|index
-expr_stmt|;
-name|index
-operator|++
-expr_stmt|;
-block|}
-assert|assert
-operator|(
-name|index
-operator|==
+name|bitSetDoc
+operator|!=
 operator|-
 literal|1
-operator|)
-operator|||
-operator|(
-name|index
-operator|>
-name|disi
-operator|.
-name|doc
-argument_list|()
-operator|)
-assert|;
-block|}
+condition|)
+block|{
 name|clear
 argument_list|(
-name|lastNotCleared
-operator|+
-literal|1
+name|bitSetDoc
 argument_list|,
 name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 comment|/**    * Perform an inplace NOT with the doc ids from a given DocIdSetIterator,    * clearing all the bits for each such doc id.    * These doc ids should be smaller than the maximum size passed to the    * constructor.    */
 DECL|method|inPlaceNot
